--- a/citations.bib
+++ b/citations.bib
@@ -382,17 +382,6 @@
 	note = {Issue: 3},
 }
 
-@inproceedings{hutter_anymal_2016,
-	title = {{ANYmal} - a highly mobile and dynamic quadrupedal robot},
-	doi = {10.1109/IROS.2016.7758092},
-	pages = {38--44},
-	booktitle = {2016 {IEEE}/{RSJ} International Conference on Intelligent Robots and Systems ({IROS})},
-	author = {Hutter, Marco and Jud, Dominic and Lauber, Andreas and Bellicoso, C. Dario and Tsounis, Vassilios and Hwangbo, Jemin and Bodie, Karen and Fankhauser, Peter and Bloesch, Michael and Diethelm, Remo and Bachmann, Samuel and Melzer, Amir and Hoepflinger, Mark},
-	date = {2016},
-	keywords = {Actuators, Dynamics, Legged locomotion, Robot sensing systems, Torque},
-	file = {PDF:/home/sky/Zotero/storage/UKL8ZVQ8/Hutter et al. - 2016 - ANYmal - a highly mobile and dynamic quadrupedal robot.pdf:application/pdf},
-}
-
 @inproceedings{schulman_trust_2015,
 	location = {Lille, France},
 	title = {Trust Region Policy Optimization},
@@ -442,4 +431,15 @@
 	author = {Dubey, Shiv Ram and Singh, Satish Kumar and Chaudhuri, Bidyut Baran},
 	date = {2022},
 	keywords = {Neural networks, Activation Functions, Convolutional neural networks, Deep learning, Overview, Recurrent Neural Networks},
+}
+
+@inproceedings{hutter_anymal_2016,
+	title = {{ANYmal} - a highly mobile and dynamic quadrupedal robot},
+	doi = {10.1109/IROS.2016.7758092},
+	pages = {38--44},
+	booktitle = {2016 {IEEE}/{RSJ} International Conference on Intelligent Robots and Systems ({IROS})},
+	author = {Hutter, Marco and Gehring, Christian and Jud, Dominic and Lauber, Andreas and Bellicoso, C. Dario and Tsounis, Vassilios and Hwangbo, Jemin and Bodie, Karen and Fankhauser, Peter and Bloesch, Michael and Diethelm, Remo and Bachmann, Samuel and Melzer, Amir and Hoepflinger, Mark},
+	date = {2016},
+	keywords = {Actuators, Dynamics, Legged locomotion, Robot sensing systems, Torque},
+	file = {ANYmal_-_a_highly_mobile_and_dynamic_quadrupedal_robot:/home/sky/Zotero/storage/BPDGIAK8/ANYmal_-_a_highly_mobile_and_dynamic_quadrupedal_robot.pdf:application/pdf},
 }
