--- a/citations.bib
+++ b/citations.bib
@@ -443,3 +443,10 @@
 	keywords = {Actuators, Dynamics, Legged locomotion, Robot sensing systems, Torque},
 	file = {ANYmal_-_a_highly_mobile_and_dynamic_quadrupedal_robot:/home/sky/Zotero/storage/BPDGIAK8/ANYmal_-_a_highly_mobile_and_dynamic_quadrupedal_robot.pdf:application/pdf},
 }
+
+@unpublished{lee_convolutional_2021,
+	title = {Convolutional Neural Network ({CNN})},
+	url = {https://speech.ee.ntu.edu.tw/~hylee/ml/ml2021-course-data/cnn_v4.pdf},
+	author = {Lee, Hung-Yi},
+	date = {2021},
+}
